dbe_backend/src/value/id/snapshots/dbe_backend__value__id__parsing__tests__parse_correct_id@'escaped ''text'''.snap
---
source: dbe_backend/src/value/id/parsing.rs
description: "For Id: 'escaped ''text'''"
---
Simple(
    Const {
        value: String(
            u!("escaped 'text'"),
        ),
    },
)
