dbe_backend/src/value/id/snapshots/dbe_backend__value__id__parsing__tests__parse_correct_id@0.e0.snap
---
source: dbe_backend/src/value/id/parsing.rs
description: "For Id: 0.e0"
---
Simple(
    Const {
        value: Number(
            0.0,
        ),
    },
)
