dbe_backend/src/value/id/snapshots/dbe_backend__value__id__parsing__tests__parse_correct_id@13.5.snap
---
source: dbe_backend/src/value/id/parsing.rs
description: "For Id: 13.5"
---
Simple(
    Const {
        value: Number(
            13.5,
        ),
    },
)
