dbe_backend/src/value/id/snapshots/dbe_backend__value__id__parsing__tests__parse_correct_id@13e3.snap
---
source: dbe_backend/src/value/id/parsing.rs
description: "For Id: 13e3"
---
Simple(
    Const {
        value: Number(
            13000.0,
        ),
    },
)
