dbe_backend/src/value/id/snapshots/dbe_backend__value__id__parsing__tests__parse_correct_id@List_Item=number.snap
---
source: dbe_backend/src/value/id/parsing.rs
description: "For Id: List<Item=number>"
---
List(
    Simple(
        Number,
    ),
)
