dbe_backend/src/value/id/snapshots/dbe_backend__value__id__parsing__tests__parse_correct_id@Map_Key=string,Item=number.snap
---
source: dbe_backend/src/value/id/parsing.rs
description: "For Id: Map<Key=string,Item=number>"
---
Map {
    key: Simple(
        String,
    ),
    value: Simple(
        Number,
    ),
}
